add readme and cleanup --help

--- a/TODO
+++ b/TODO
@@ -1,1 +1,5 @@
-None so far
+* Make directories if they don't exist
+** If a link is `/root/someDir/.har` and `someDir` doesn't exist, it should be
+   created
+* Make it transactional!
+** Make the transactional ability optional
